# OCDE-P6

./: .gitignore  README.md  bentofile.yaml  modelisation_model0.ipynb  modelistation_model1.ipynb  modelistation_model2.ipynb  modelistation_supervisee_EDA.ipynb  pyproject.toml  requirements.txt  template_modelistation_supervisee.ipynb
bash/: launchDocker.sh  launchGCP.sh  launch_request.sh  stop_GCP.sh  test_GCP.sh  updateToGCP.sh
data/: 2016_Building_Energy_Benchmarking_sample.csv  bc_after_eda.csv
docs/: Keynotes.md  dico2.ods
docs/contexte/: MissionPartie1.txt  MissionPartie2.txt
ocde_p6/: __init__.py  launch_request.sh
ocde_p6/api/: service.py
ocde_p6/model/: model_loader.py
ocde_p6/preprocessing/: transformer.py
ocde_p6/utils/: config.py  enums.py  exceptions.py  logger.py
ocde_p6/validation/: schemas.py
